example/errors/interpret/invalid_lhs_assign.box
//54321 = 34312;
54321 += 34312f;
